--- a/login-testing-proj/Base.lproj/Main.storyboard
+++ b/login-testing-proj/Base.lproj/Main.storyboard
@@ -122,10 +122,20 @@
         <!--Inbox Tab-->
         <scene sceneID="1Fe-jF-Twt">
             <objects>
-                <viewController id="1Iz-Z5-uYF" userLabel="Inbox Tab" sceneMemberID="viewController">
+                <viewController id="1Iz-Z5-uYF" userLabel="Inbox Tab" customClass="InboxViewController" customModule="login_testing_proj" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gff-5y-nAF">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="opY-xj-nEQ">
+                                <rect key="frame" x="0.0" y="162" width="390" height="468"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="1Iz-Z5-uYF" id="czS-gx-LrA"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="MbW-gz-1re"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -133,7 +143,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mys-hK-lvZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="11" y="-457"/>
+            <point key="canvasLocation" x="10.769230769230768" y="-457.10900473933646"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="3Xf-OZ-sN8">
@@ -177,9 +187,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="30" id="1oA-81-XrF">
-                                <rect key="frame" x="40" y="350" width="310" height="185"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="1oA-81-XrF">
+                                <rect key="frame" x="40" y="329.66666666666669" width="310" height="185.00000000000006"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="9NY-Tj-nud" userLabel="E-mail Text Field">
                                         <rect key="frame" x="0.0" y="0.0" width="310" height="40"/>
@@ -220,7 +229,6 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <viewLayoutGuide key="safeArea" id="PEs-3g-gp8"/>
                                 <constraints>
                                     <constraint firstItem="UaG-8u-rWZ" firstAttribute="leading" secondItem="1oA-81-XrF" secondAttribute="leading" constant="20" id="14q-Nx-Zxz"/>
                                     <constraint firstAttribute="trailing" secondItem="9NY-Tj-nud" secondAttribute="trailing" id="BOp-Dx-jc0"/>
@@ -231,8 +239,13 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="vLl-mH-8gT"/>
+                        <viewLayoutGuide key="safeArea" id="o7l-91-Ahk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="o7l-91-Ahk" firstAttribute="trailing" secondItem="1oA-81-XrF" secondAttribute="trailing" constant="40" id="6uL-Ou-Vhh"/>
+                            <constraint firstItem="1oA-81-XrF" firstAttribute="centerY" secondItem="ZNt-CG-Sl8" secondAttribute="centerY" id="Uu1-hp-AmL"/>
+                            <constraint firstItem="1oA-81-XrF" firstAttribute="leading" secondItem="o7l-91-Ahk" secondAttribute="leading" constant="40" id="Vud-Qc-RHh"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Iq3-Be-T7k"/>
                     <connections>
